-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
-
b05
When reapplying JDK-8252505 to jdk/jdk, I stumbled upon the bad merge.
This was the original changeset:
https://github.com/openjdk/jdk16/commit/ad456787
This was the merge:
https://github.com/openjdk/jdk/commit/555641ede5e234c936fca98436ef6aeace2351fc
Note that not all blocks were removed from compilerOracle.
This was the original changeset:
https://github.com/openjdk/jdk16/commit/ad456787
This was the merge:
https://github.com/openjdk/jdk/commit/555641ede5e234c936fca98436ef6aeace2351fc
Note that not all blocks were removed from compilerOracle.
- relates to
-
JDK-8258558 Revert changes for JDK-8252505 and related issues
-
- Resolved
-