8259475: Fix bad merge in compilerOracle